karl package Changelog
======================

Unreleased
----------

- The edit blog entry form is now only associated with the IBlogEntry content
  type. (LP #715897)

3.63 (2011-06-03)
-----------------

- Fix for grid error when viewing it not within a files section. This fixes an
  error on the top level reference manuals page.

3.62 (2011-06-02)
-----------------

- Multiple upload and file management (move/delete)

- Fixed merge bug that made repoze.pgtextindex mandatory for building Karl.
  repoze.pgtextindex (and psycopg2) are now optional again.

3.61 (2011-05-26)
-----------------

- Livesearch result text overflow fix (LP #785450)

- Trigger search on paste - rejuice from latest bottlecap (LP #785789)

3.60 (2011-05-20)
-----------------

- Pagination is now reset when clicking on a facet in the search results page.
  (LP #785360)

- When waiting for livesearch results and a user hits enter, don't display an
  error message.

3.59 (2011-05-19)
-----------------

- Implemented better live search and search results pages.  (Merged from
  ree-livesearch-resources branch.)

3.58 (2011-05-17)
-----------------

- Added support for contextual summaries in search when using
  repoze.pgtextindex. Had to refactor how text representations are generated
  for both pgtextindex and Zope text index in the process. Merged from branch,
  'rossi-contextual-summaries'. (LP #707671)

- Fixed bug in distribution lists where the mail recipients were not being
  passed as a list.  (LP #780000)

- Added a mailin trace tool.  It looks like a regular blog tool but instead of
  saving a blog entry that is added to it, it updates the timestamp on a file
  in the filesystem. By sending a special tracer email to this tool at regular
  intervals, the health of the mailin system can be monitored by monitoring the
  timestamp on this external file.  (LP #770428)

- Thumbnail view now raises NotFound if it can't extract a thumbnail size from
  the subpath.  (LP #777365)
